[gd_scene load_steps=8 format=3 uid="uid://diaflvowwjf8w"]

[ext_resource type="Script" path="res://menus/game_over/game_over.gd" id="1_6x47w"]
[ext_resource type="Texture2D" uid="uid://c5yn5ani81c23" path="res://art_assets/back_arrow/back_arrow.png" id="2_n33rf"]
[ext_resource type="Texture2D" uid="uid://2sl7smwcxlp3" path="res://art_assets/back_arrow/back_arrow_white.png" id="3_amajp"]

[sub_resource type="LabelSettings" id="LabelSettings_4ccgt"]
font_size = 44
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_grsl6"]
font_size = 28
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_chqr2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g7ly6"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_6x47w")

[node name="WhiteColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 320.0
offset_bottom = 480.0

[node name="BlackColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 320.0
offset_bottom = 480.0
color = Color(0, 0, 0, 1)

[node name="GameOverText" type="Label" parent="."]
offset_right = 320.0
offset_bottom = 122.0
text = "Game Over!"
label_settings = SubResource("LabelSettings_4ccgt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreText" type="Label" parent="."]
offset_top = 199.0
offset_right = 320.0
offset_bottom = 267.0
text = "Score: ##"
label_settings = SubResource("LabelSettings_grsl6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackArrow" type="Node2D" parent="."]

[node name="BackArrowBlack" type="Sprite2D" parent="BackArrow"]
visible = false
position = Vector2(285, 444)
texture = ExtResource("2_n33rf")

[node name="BackArrowWhite" type="Sprite2D" parent="BackArrow"]
visible = false
position = Vector2(285, 444)
texture = ExtResource("3_amajp")

[node name="Button" type="Button" parent="BackArrow"]
offset_left = 265.0
offset_top = 428.0
offset_right = 309.0
offset_bottom = 463.0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_chqr2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g7ly6")
flat = true

[connection signal="pressed" from="BackArrow/Button" to="." method="_on_button_pressed"]
